--- a/css/style.css
+++ b/css/style.css
@@ -1,94 +1,467 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-.carousel-inner .carousel-item img{
-    height: 100vh;
-    background: rgba(107, 96, 94, 0.719);
-}
-.navbar{
-    font-size: 1.5rem;
-    font-weight: 600;
-}
-.navbar-dark .navbar-nav .nav-link{
-    color: white;
-}
-.navbar a{
-    margin-left: 10px;
-}
-.navbar-brand{
-    font-size: 2rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.carousel-caption{
-    bottom: 223px;
+.carousel-inner .carousel-item img {
+  height: 100vh;
+  background: rgba(107, 96, 94, 0.719);
 }
-.carousel-item{
-    position: relative !important;
+
+.navbar {
+  font-size: 100%;
+  font-weight: 600;
+  background: rgba(107, 96, 94, 0.719);
 }
-.overlay{position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0px;
-    left: 0px;
-    background: rgba(0, 0, 0, 0.6);
+
+.navbar-dark .navbar-nav .nav-link {
+  color: white;
+  transition: .9s;
+
 }
-.exp{
-    text-decoration: none;
-    color: white;
+.card-text{
+  text-transform: uppercase;
 }
-h5{
-    background-color: tomato;
-    display: inline-block;
-    border: 10px solid tomato;
-    border-radius: 37px;
-    color: white;
-    padding: 10px 10px 10px 10px;
-    cursor: pointer;
-    margin-bottom: 20px;
-    margin-bottom: -15px;
-    margin-top: 68px;
-    transition: 0.9s;
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: #ec1839;
 }
-h5:hover{
-    padding-left:20px;
-    padding-right:20px ;
+
+.navbar a {
+  margin-left: 10px;
+}
+
+.navbar-brand img{
+  height: 40px;
+  width: 135px;
+}
+.dropdown-menu{
+  background: rgba(107, 96, 94, 1);
+  margin-top: 13px;
+}
+.dropdown-item{
+  color: #ffffff;
+}
+.dropdown-item:hover {
+  background-color: transparent;
+}
+h2{
+  font-family: 'Righteous', cursive;
+  font-weight: 400;
+  font-size: 4rem;
+  margin-top: 10px;
+  margin-bottom: 25px ;
+  text-align: center;
+}
+.carousel-caption {
+  bottom: 223px;
+}
+
+.carousel-item {
+  position: relative !important;
+}
+
+.overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.exp {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+h5 {
+  display: inline-block;
+  border: 1px solid #ec1839;
+  border-radius: 37px;
+  color: white;
+  padding: 10px 20px 10px 20px;
+  cursor: pointer;
+  margin-bottom: 20px;
+  margin-bottom: -15px;
+  margin-top: 68px;
+  transition: 0.9s;
+
+}
+
+h5:hover {
+  padding-left: 25px;
+  padding-right: 25px;
+  border: 10ps solid #ec1839;
+  background-color: #ec1839;
 }
 
 h1 {
-    font-size:5em;
-    font:bold 7.5vw/1.6 'Signika', sans-serif;
-    user-select:none;
-   }
-   
-   h1 span { display:inline-block; animation:float .2s ease-in-out infinite; }
-    @keyframes float {
-     0%,100%{ transform:none; }
-     33%{ transform:translateY(-1px) rotate(-2deg); }
-     66%{ transform:translateY(1px) rotate(2deg); }
-   }
-   body:hover span { animation:bounce .6s; }
-   @keyframes bounce {
-     0%,100%{ transform:translate(0); }
-     25%{ transform:rotateX(20deg) translateY(2px) rotate(-3deg); }
-     50%{ transform:translateY(-20px) rotate(3deg) scale(1.1);  }
-   }
-   
-   span:nth-child(4n) { color:hsl(50, 75%, 55%); text-shadow:1px 1px hsl(50, 75%, 45%), 2px 2px hsl(50, 45%, 45%), 3px 3px hsl(50, 45%, 45%), 4px 4px hsl(50, 75%, 45%); }
-   span:nth-child(4n-1) { color:hsl(135, 35%, 55%); text-shadow:1px 1px hsl(135, 35%, 45%), 2px 2px hsl(135, 35%, 45%), 3px 3px hsl(135, 35%, 45%), 4px 4px hsl(135, 35%, 45%); }
-   span:nth-child(4n-2) { color:hsl(155, 35%, 60%); text-shadow:1px 1px hsl(155, 25%, 50%), 2px 2px hsl(155, 25%, 50%), 3px 3px hsl(155, 25%, 50%), 4px 4px hsl(140, 25%, 50%); }
-   span:nth-child(4n-3) { color:hsl(30, 65%, 60%); text-shadow:1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%), 3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%); }
-   
-   h1 span:nth-child(2){ animation-delay:.05s; }
-   h1 span:nth-child(3){ animation-delay:.1s; }
-   h1 span:nth-child(4){ animation-delay:.15s; }
-   h1 span:nth-child(5){ animation-delay:.2s; }
-   h1 span:nth-child(6){ animation-delay:.25s; }
-   h1 span:nth-child(7){ animation-delay:.3s; }
-   h1 span:nth-child(8){ animation-delay:.35s; }
-   h1 span:nth-child(9){ animation-delay:.4s; }
-   h1 span:nth-child(10){ animation-delay:.45s; }
-   h1 span:nth-child(11){ animation-delay:.5s; }
-   h1 span:nth-child(12){ animation-delay:.55s; }
-   h1 span:nth-child(13){ animation-delay:.6s; }
-   h1 span:nth-child(14){ animation-delay:.65s; }
+  font-size: 5em;
+  font: bold 7.5vw/1.6 'Signika', sans-serif;
+  user-select: none;
+  text-align: center;
+}
+
+h1 span {
+  display: inline-block;
+  animation: float .2s ease-in-out infinite;
+}
+
+@keyframes float {
+  0%,
+  100% {
+    transform: none;
+  }
+  33% {
+    transform: translateY(-1px) rotate(-2deg);
+  }
+  66% {
+    transform: translateY(1px) rotate(2deg);
+  }
+}
+
+body:hover span {
+  animation: bounce .6s;
+}
+
+@keyframes bounce {
+
+  0%,
+  100% {
+    transform: translate(0);
+  }
+
+  25% {
+    transform: rotateX(20deg) translateY(2px) rotate(-3deg);
+  }
+
+  50% {
+    transform: translateY(-20px) rotate(3deg) scale(1.1);
+  }
+}
+
+span:nth-child(4n) {
+  color: hsl(50, 75%, 55%);
+  text-shadow: 1px 1px hsl(50, 75%, 45%), 2px 2px hsl(50, 45%, 45%), 3px 3px hsl(50, 45%, 45%), 4px 4px hsl(50, 75%, 45%);
+}
+
+span:nth-child(4n-1) {
+  color: hsl(135, 35%, 55%);
+  text-shadow: 1px 1px hsl(135, 35%, 45%), 2px 2px hsl(135, 35%, 45%), 3px 3px hsl(135, 35%, 45%), 4px 4px hsl(135, 35%, 45%);
+}
+
+span:nth-child(4n-2) {
+  color: hsl(155, 35%, 60%);
+  text-shadow: 1px 1px hsl(155, 25%, 50%), 2px 2px hsl(155, 25%, 50%), 3px 3px hsl(155, 25%, 50%), 4px 4px hsl(140, 25%, 50%);
+}
+
+span:nth-child(4n-3) {
+  color: hsl(30, 65%, 60%);
+  text-shadow: 1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%), 3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%);
+}
+
+h1 span:nth-child(2) {
+  animation-delay: .05s;
+}
+
+h1 span:nth-child(3) {
+  animation-delay: .1s;
+}
+
+h1 span:nth-child(4) {
+  animation-delay: .15s;
+}
+
+h1 span:nth-child(5) {
+  animation-delay: .2s;
+}
+
+h1 span:nth-child(6) {
+  animation-delay: .25s;
+}
+
+h1 span:nth-child(7) {
+  animation-delay: .3s;
+}
+
+h1 span:nth-child(8) {
+  animation-delay: .35s;
+}
+
+h1 span:nth-child(9) {
+  animation-delay: .4s;
+}
+
+h1 span:nth-child(10) {
+  animation-delay: .45s;
+}
+
+h1 span:nth-child(11) {
+  animation-delay: .5s;
+}
+
+h1 span:nth-child(12) {
+  animation-delay: .55s;
+}
+
+h1 span:nth-child(13) {
+  animation-delay: .6s;
+}
+
+h1 span:nth-child(14) {
+  animation-delay: .65s;
+}
+
+@-webkit-keyframes zoom {
+  from {
+    -webkit-transform: scale(1, 1);
+  }
+
+  to {
+    -webkit-transform: scale(1.5, 1.5);
+  }
+}
+
+@keyframes zoom {
+  from {
+    transform: scale(1, 1);
+  }
+  to {
+    transform: scale(1.5, 1.5);
+  }
+}
+
+.carousel-inner .carousel-item>img {
+  -webkit-animation: zoom 20s;
+  animation: zoom 20s;
+}
+h6{
+  font-weight: 400;
+  font-family: Righteous, cursive;
+  font-size: 2rem;
+}
+.exp1{
+  margin-bottom: 50px;
+  text-align: justify;
+  font-size: 100%;
+  text-transform: capitalize;
+}
+
+.about img{
+  background: rgba(107, 96, 94, 0.719);;
+}
+.about-header {
+  text-align: center;
+}
+
+.about-text {
+  text-align: justify;
+}
+.card{
+  border: 3px solid  #ec1839;
+  transition: 0.9s;
+  cursor: pointer;
+  transition: 0.9s;
+}
+.card:hover{
+  -webkit-box-shadow: 5px 5px 15px 5px #000000; 
+  box-shadow: 5px 5px 15px 5px #000000;
+}
+.card-body i{
+  font-size: 40px;
+  color: #ec1839;
+  transition: 0.9s;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.card:hover .card-body i{
+  background-color: #ec1839;
+  color: #ffffff;
+  height: 40px;
+  width:  40px;
+  line-height: 40px;
+  font-size: 30px;
+  border-radius: 50%;
+}
+.section .container {
+  max-width: 1100px;
+  margin: auto;
+  width: 100%;
+}
+
+.section .container .row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+  position: relative;
+}
+.contact{
+  margin-bottom: 38px;
+}
+.contact-info-item {
+  -ms-flex: 0 0 33.33%;
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.contact-info-item .icon {
+  display: inline-block;
+}
+
+.contact-info-item .icon .fas {
+  font-size: 40px;
+  color: #ec1839;
+}
+
+.contact-info-item h4 {
+  font-size: 18px;
+  font-weight: 700;
+  color: #302e4d;
+  text-transform: capitalize;
+
+}
+
+.contact-section .contact-info-item p a {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px;
+  color: #504e70;
+  text-decoration: none;
+  margin: 0;
+}
+
+.contact-form {
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 0 25px;
+}
+
+.contact-section .contact-form .col-6 {
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.contact-section .contact-form .col-12 {
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.contact-section .contact-form .form-item {
+  margin-bottom: 30px;
+}
+
+.contact-section .contact-form .form-item .form-control {
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  border: 1px solid #d4d4e3;
+  padding: 10px 25px;
+  font-size: 16px;
+  color: #504e70;
+  -webkit-transition: all 0.7s ease;
+  transition: all 0.7s ease;
+}
+
+.contact-section .contact-form .form-item .form-control:focus {
+  -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+  box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+
+.contact-section .contact-form .form-item textarea.form-control {
+  height: 140px;
+}
+
+.contact-section .contact-form .btn {
+  height: 50px;
+  padding: 0 50px;
+}
+
+.contact-section .contact-info-item h4 {
+  color: #ffffff;
+}
+
+.contact-form .btn {
+  font-size: 16px;
+  font-weight: 500;
+  padding: 12px 35px;
+  color: #ffffff;
+  border-radius: 37px;
+  display: inline-block;
+  white-space: nowrap;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.9s ease;
+  border: none;
+  cursor: pointer;
+  height: 50px;
+  padding: 0 50px;
+  background-color: #ec1839;
+  margin-bottom: 10px;
+}
+
+.contact-form .btn:hover {
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+.heading {
+  color: #ec1839;
+  font-size: 4rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  font-family: 'Piedra', cursive;
+}
+
+
+@media (max-width:797px) {
+  .contact-section .contact-form .col-6 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+@media (max-width:575px) {
+  .contact-section .contact-info-item {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .navbar {
+    background: rgba(0, 0, 0, 0.6);
+  }
+  .dropdown-menu{
+    background: rgba(0, 0, 0, 0.6);
+  
+  }
+  .dropdown-item{
+    color: #ffffff;
+  }
+  .dropdown-item:hover{
+    color:#ec1839 ;
+  }
+  .col-md-6{
+    margin: 20px 0 !important;
+  }
+  .heading{
+    font-size: 1.6rem;
+  }
+  h2{
+    font-size: 1.7rem;
+  }
+  h6{
+    font-size: 1.3rem;
+  }
+  
+}
